# Minecraft-ADK-Guild

./: .dockerignore  .env.example  .gcloudignore  .gitignore  .pre-commit-config.yaml  AGENT_IMPLEMENTATION_PLAN.md  CHECK_INVENTORY_E2E_TEST_PLAN.md  CLEANUP_PLAN.md  Dockerfile  EVENT_BRIDGE_IMPLEMENTATION_COMPLETE.md  EVENT_BRIDGE_IMPLEMENTATION_PLAN.md  LICENSE  QUICKSTART.md  README.md  SETUP.md  benchmark_performance.py  cloudbuild.yaml  demo_agent_logging.py  docker-compose.yml  main.py  package.json  pyproject.toml  requirements.txt  run_inventory_e2e_test.py  setup_env.sh  test_adk_integration.py  test_adk_patterns.py  test_docker_minecraft.py  test_event_bridge.py  test_inventory_flow_demo.py  test_movement_debug.py  test_option1_mock.py  test_real_minecraft_server.py  test_setup.py  verify_implementation.py
.claude/: settings.local.json
deploy/: CHANGELOG.md  README.md  __init__.py  config.py  deploy_agent.py  deploy_minecraft.py  requirements.txt  setup_monitoring.py  setup_project.py  setup_secrets.py  startup-script.sh  validate_setup.py
docs/: EVENT_BRIDGE_API_REFERENCE.md  EVENT_BRIDGE_ARCHITECTURE.md  PHASE1_COMPLETE.md  in_game_chat_messages.md  interactive-agent-loop-architecture.dot  interactive-agent-loop-flow.dot  interactive-agent-loop-simple.dot  transfer_to_agent_updates.md
docs/diagrams/: data_flow_diagram.dot  minecraft_multiagent_architecture.dot
minecraft_coordinator/: __init__.py  agent.py  callbacks.py  prompt.py
minecraft_crafter/: __init__.py  agent.py  prompt.py
minecraft_gatherer/: __init__.py  agent.py  prompt.py
monitoring/: prometheus.yml
python-minecraft-data/: example.py
scripts/: demo_adk_patterns.py  run_agent.py
src/: __init__.py  config.py  logging_config.py  minecraft_bot_controller.py  minecraft_data_service.py
test_results/: option1_mock_results.json
tests/: __init__.py  mocks.py  test_adk_agents.py  test_adk_integration.py  test_agent_callback_integration.py  test_agent_callbacks.py  test_bridge.py  test_check_inventory_e2e.py  test_coordinator_craft_flow.py  test_craft_item_integration.py  test_craft_stick_current_behavior.py  test_craft_stick_demonstration.py  test_craft_stick_integration.py  test_event_bridge_basic.py  test_event_bridge_comprehensive.py  test_event_bridge_performance.py  test_event_bridge_runner.py  test_event_bridge_unit.py  test_integration.py  test_logging_integration.py  test_minecraft_data_service.py  test_performance.py  test_terminal_logging.py
(+57 files in other folders)
