[project]
name = "minecraft-multiagent"
version = "0.1.0"
description = "Multi-agent Minecraft system using Google ADK and Mineflayer"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-adk>=1.1.1",
    "javascript>=1.2.2",
    "websockets>=12.0",
    "structlog>=24.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.6.0",
]
deploy = [
    "google-cloud-compute>=1.14.0",
    "google-cloud-resource-manager>=1.10.0",
    "google-cloud-secret-manager>=2.16.0",
    "google-cloud-monitoring>=2.15.0",
    "google-cloud-aiplatform[adk,agent_engines]>=1.43.0",
]

[project.scripts]
minecraft-agent = "scripts.run_agent:main"

[tool.ruff]
line-length = 120
target-version = "py311"
select = ["E", "F", "I", "N", "W"]
ignore = ["E501", "E402"]

[tool.black]
line-length = 120
target-version = ["py311"]
